--- a/app/partials/video-list.html
+++ b/app/partials/video-list.html
@@ -3,7 +3,7 @@
     <ul class="indexNavList">
       <li><a href="http://www.wandoujia.com/eyepetizer">App官网</a></li>
       <li><a href="http://jas0n.me">博客</a></li>
-      <li><a>项目地址</a></li>
+      <li><a href="https://github.com/jas0ndyq/Eyepetizer">项目地址</a></li>
     </ul>
   </div>
   <div class="titleLogo">
